force-app/main/default/objects/Account/fields/Participate_Merit_based_Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Participate_Merit_based_Incentive_Plan__c</fullName>
    <label>Participate- Merit-based Incentive Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>