force-app/main/default/objects/Account/fields/Participated_in_Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>Participated_in_Clinical_Trial__c</fullName>
    <label>Participated in Clinical Trial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>