force-app/main/default/objects/Account/fields/Participating_in_Oncology_Care_Model__c.field-meta.xml
<CustomField>
    <fullName>Participating_in_Oncology_Care_Model__c</fullName>
    <label>Participating in Oncology Care Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>