force-app/main/default/objects/Account/fields/Payment_for_Heart_Attack_patients__c.field-meta.xml
<CustomField>
    <fullName>Payment_for_Heart_Attack_patients__c</fullName>
    <label>Payment for Heart Attack patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>