force-app/main/default/objects/Account/fields/Payment_for_Heart_Failure_Patients__c.field-meta.xml
<CustomField>
    <fullName>Payment_for_Heart_Failure_Patients__c</fullName>
    <label>Payment for Heart Failure Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>