force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08</fullName>
                <label>Net 27 Days</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Net 30 Days</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Net 10 Days</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Net 7 Days</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Net 15 Days</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Net 20 Days</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Upon Receipt</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Net 25 Days</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Net 14 Days</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Net 8 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>