force-app/main/default/objects/Account/fields/Payor_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Payor_Affiliations__c</fullName>
    <label>Payor Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>