force-app/main/default/objects/Account/fields/Pharmacy_Distributor_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Distributor_Affiliations__c</fullName>
    <label>Pharmacy Distributor Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>