force-app/main/default/objects/Account/fields/Physician_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Physician_Group_Type__c</fullName>
    <inlineHelpText>Group type from Definitive</inlineHelpText>
    <label>Physician Group Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>