force-app/main/default/objects/Account/fields/Population_Health_Management__c.field-meta.xml
<CustomField>
    <fullName>Population_Health_Management__c</fullName>
    <label>Population Health Management</label>
    <length>100</length>
    <type>Text</type>
</CustomField>