force-app/main/default/objects/Account/fields/Primary_Hospital_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Hospital_Affiliation__c</fullName>
    <label>Primary Hospital Affiliation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>