force-app/main/default/objects/Account/fields/Primary_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sub_Industry__c</fullName>
    <label>Primary Sub Industry</label>
    <type>TextArea</type>
</CustomField>