force-app/main/default/objects/Account/fields/RPC_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>RPC_Affiliations__c</fullName>
    <label>RPC Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>