force-app/main/default/objects/Account/fields/Specialities_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Specialities_Taxonomy__c</fullName>
    <label>Specialities (Taxonomy)</label>
    <length>254</length>
    <type>Text</type>
</CustomField>