force-app/main/default/objects/Account/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&quot;Staged&quot;</defaultValue>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staged</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Past Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>