force-app/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Physician Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>