force-app/main/default/objects/Account/fields/Syspro_AR_Terms__c.field-meta.xml
<CustomField>
    <fullName>Syspro_AR_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AR Terms</label>
    <referenceTo>CommercientSF__TblArTerms__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>