force-app/main/default/objects/Account/fields/Syspro_Branch__c.field-meta.xml
<CustomField>
    <fullName>Syspro_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Branch</label>
    <referenceTo>CommercientSF__SalBranch__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>