force-app/main/default/objects/Account/fields/Syspro_Code__c.field-meta.xml
<CustomField>
    <fullName>Syspro_Code__c</fullName>
    <label>Syspro Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>