force-app/main/default/objects/Account/fields/syspro_inactive__c.field-meta.xml
<CustomField>
    <fullName>syspro_inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syspro Inactive</label>
    <type>Checkbox</type>
</CustomField>