force-app/main/default/objects/Account/fields/Syspro_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Syspro_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Person</label>
    <referenceTo>CommercientSF__SalSalesPerson__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>