force-app/main/default/objects/Account/fields/TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID__c</fullName>
    <label>TAX ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>