force-app/main/default/objects/Account/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <inlineHelpText>Technologies from Zoom</inlineHelpText>
    <label>Technologies</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>