force-app/main/default/objects/Account/fields/Total_Closed_Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Lost_Opportunities__c</fullName>
    <description>Count of Closed won Opportunities</description>
    <label>Total Closed Lost Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>