force-app/main/default/objects/Account/fields/Total_Closed_Lost_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Lost_Revenue__c</fullName>
    <label>Total Closed Lost Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>