force-app/main/default/objects/Account/fields/Total_Closed_Won_Mulesoft_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won_Mulesoft_ACV__c</fullName>
    <label>Total Closed Won Mulesoft ACV</label>
    <summarizedField>Opportunity.ACV_MuleSoft__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>