force-app/main/default/objects/Account/fields/Total_Money_Raised__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Raised__c</fullName>
    <inlineHelpText>Total Money Raised</inlineHelpText>
    <label>Total Money Raised</label>
    <length>50</length>
    <type>Text</type>
</CustomField>