force-app/main/default/objects/Account/fields/Total_Outpatient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Outpatient_Revenue__c</fullName>
    <label>Total Outpatient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>