force-app/main/default/objects/Account/fields/Total_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Revenue__c</fullName>
    <label>Total Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>