force-app/main/default/objects/Account/fields/Total_Performance_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Performance_Score__c</fullName>
    <label>Total Performance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>