force-app/main/default/objects/Account/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <inlineHelpText>Year Founded (Information enriched from Hubspot)</inlineHelpText>
    <label>Year Founded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>