force-app/main/default/objects/Account/fields/ZoomInfo_Account_ExtID__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Account_ExtID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomInfo Account ExtID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>