force-app/main/default/objects/Account/listViews/All_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Active_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Syspro_Code__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Payment_Terms__c</columns>
    <columns>syspro_inactive__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>syspro_inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Accounts</label>
</ListView>